--- a/Index.html
+++ b/Index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 	<meta charset="UTF-8" />
-	<meta name="description" content="Txuritan Home Page" />
-	<meta name="keywords" content="Minecraft,Mods,PotatoCraft,Legendary,Worlds,Java,Forge" />
+	<meta name="description" content="Metro-CSS Boilerplate" />
+	<meta name="keywords" content="" />
 	<meta name="author" content="Txuritan" />
 	<meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport' />
-	<title>Txuritan | Home</title>
+	<title>Metro-CSS | Home</title>
+	<link href="dist/css/metro-css.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 </body>
