Update and rename Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@ generated automatically and are common for each slider. */
 </style>
 </head>
 <body>
+<a href="#" class="myButton">facebook</a>
 <div class="accordion">
     <ul>
         <li>
